@@ -5,6 +5,8 @@
     * Loading unzipped FMUs now also works with relative paths.
     * Enabled setting logging categories in FMI2 via "set_debug_logging".
     * XML Logs exceeding maximal size will now be truncated to start/end of the last CAPI call which did not exceed the maximal log size.
+    * Changed custom result handling for the Master algorithm to instead use a single ResultHandler for each model.
+      A dictionary of the form {model: ResultHandler} needs to be supplied to the option.
 
 --- PyFMI-2.13.1 ---
     * Numpy 2.x support
